--- a/clickme.html
+++ b/clickme.html
@@ -7,4 +7,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<p1>I will be using this page to test features and functions, an I will want your feedback sometimes. </p1>
+	<p1>I will be using this page to test features and functions, and I will want your feedback sometimes. </p1>
+<div>
+		<img src="img/heart.png" alt="heart-pic"/>
+	</div>
